# fuel-pipeline

./: .env_example  README.md  pyproject.toml  rest_api_cso.duckdb
.dg/: telemetry.yaml
src/fuel_pipeline/defs/data_ingest/: defs.yaml  loads.py
src/fuel_pipeline/defs/data_ingest/cso/: __init__.py  source.py
